new tutorial details added

--- a/index.html
+++ b/index.html
@@ -322,7 +322,119 @@
         <div class="contents">
             <!-- Main Content of tutorial -->
             <main>
-                <p>Main Contents</p>
+                <!-- Main Tutorials come here: -->
+                <div class="tutorials">
+                    <h1 class="topHeading">HTML Tutorial</h1>
+                    <div class="nextAndPrevBtn">
+                        <button>
+                            <img src="images/icon/prev.png">
+                            <p>
+                                Home
+                            </p>
+                        </button>
+                        <button class="nextBtn">
+                            <p>
+                                Next
+                            </p>
+                            <img src="images/icon/next.png">
+                        </button>
+                    </div>
+                    <div class="details detailOne">
+                        <p>
+                            HTML is the standard markup language for Web pages.
+                        </p>
+                        <p>
+                            With HTML you can create your own Website.
+                        </p>
+                        <p>
+                            HTML is easy to learn - You will enjoy it!
+                        </p>
+                        <a href="#">
+                            Study our free HTML Tutorial »
+                        </a>
+                        <a href="#">
+                            Watch our free tutorial »
+                            <span>
+                                NEW
+                            </span>
+                        </a>
+                    </div>
+                    <hr class="hr1">
+                    <div class="details detailTwo">
+                        <h2>Easy Learning with HTML "Try it Yourself"</h2>
+                        <p>With our "Try it Yourself" editor, you can edit the HTML code and view the result:</p>
+                        <div class="detailTwo-codeExample">
+                            <p>Example</p>
+                            <div class="detailTwo-codeExample-codeSpace">
+                                <code>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">!DOCTYPE</span>
+                                    <span class="redText">html</span>
+                                    <span class="blueText">></span>
+                                    <br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">html</span>
+                                    <span class="blueText">></span>
+                                    <br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">head</span>
+                                    <span class="blueText">></span>
+                                    <br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">title</span>
+                                    <span class="blueText">></span>
+                                    Page Title
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">/title</span>
+                                    <span class="blueText">></span>
+                                    <br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">/head</span>
+                                    <span class="blueText">></span>
+                                    <br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">body</span>
+                                    <span class="blueText">></span>
+                                    <br><br><br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">h1</span>
+                                    <span class="blueText">></span>
+                                    This is a Heding
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">/h1</span>
+                                    <span class="blueText">></span>
+                                    <br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">p</span>
+                                    <span class="blueText">></span>
+                                    This is a Paragraph
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">/p</span>
+                                    <span class="blueText">></span>
+                                    <br><br><br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">/body</span>
+                                    <span class="blueText">></span>
+                                    <br>
+                                    <span class="blueText"><</span>
+                                    <span class="brownText">/html</span>
+                                    <span class="blueText">></span>
+                                </code>
+                            </div>
+                            <button>
+                                Try it yourself »
+                            </button>
+                        </div>
+                        <span>
+                            Click on the "Try it Yourself" button to see how it works.
+                        </span>
+                    </div>
+                </div>
+                <!-- ADS -->
+                <div class="advertisement">
+                    <p>Advertisement</p>
+                    <img src="images/lable/ad.png">
+                </div>
             </main>
             <!-- Footer -->
             <footer>
